@@ -1,6 +1,6 @@
 /*
- * Copyright (C) 2020 Linux Studio Plugins Project <https://lsp-plug.in/>
- *           (C) 2020 Vladimir Sadovnikov <sadko4u@gmail.com>
+ * Copyright (C) 2025 Linux Studio Plugins Project <https://lsp-plug.in/>
+ *           (C) 2025 Vladimir Sadovnikov <sadko4u@gmail.com>
  *
  * This file is part of lsp-runtime-lib
  * Created on: 23 окт. 2020 г.
@@ -87,9 +87,10 @@ namespace lsp
             io::Path tmp;
             nError  = build_path(&tmp, path);
 
-            return (nError == STATUS_OK) ? ILoader::enumerate(&tmp, list) : -nError;
+            return (nError == STATUS_OK) ? ILoader::enumerate(&tmp, list) : -set_error(nError);
         }
-    }
-}
+
+    } /* namespace resource */
+} /* namespace lsp */
 
 
